Sat Nov  9 16:06:57 2002  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/tcltklib/stubs.c: should include "util.h" for ruby_strdup.

Fri Nov  8 22:11:56 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* stable version 1.6.8 release candidate.

Fri Nov  8 22:10:51 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_eval): removed unnecessary toplevel check.

Thu Nov  7 09:51:37 2002  Nobuyoshi Nakada  <nobu.nokada@softhome.net>

	* eval.c (blk_orphan): a block created in a different thread is
	  orphan.  [ruby-dev:17471]

Mon Nov  4 04:04:32 2002  Akinori MUSHA  <knu@iDaemons.org>

	* lib/getopts.rb: Do not choke on characters that cannot be used
	  in a variable name.  Replace them with `_'.  Define a hash named
	  $OPT for convenience.

Thu Oct 31 09:31:51 2002  K.Kosako  <kosako@sofnec.co.jp>

	* eval.c (rb_export_method): undef'ed method visibility should not
	  be changed.

Sun Oct 27 00:55:21 2002  Akinori MUSHA  <knu@iDaemons.org>

	* array.c, class.c, eval.c, file.c, gc.c, node.h, numeric.c,
	  object.c, parse.y, range.c, re.c, string.c, struct.c, util.c,
	  ext/socket/socket.c: merge from 1.7: treat long values as long
	  instead of int.

Sat Oct 26 04:39:48 2002  Akinori MUSHA  <knu@iDaemons.org>

	* parse.y (str_extend): pushback() takes one argument, so properly
	  pass c to it.

Sat Oct 26 04:38:25 2002  Akinori MUSHA  <knu@iDaemons.org>

	* ext/dbm/dbm.c (fdbm_indexes, fdbm_select): add a missing
	  argument and prevent coredump when a nonexistent key is
	  specified.

	* ext/sdbm/init.c (fsdbm_indexes, fsdbm_select): ditto.
  
Sat Oct 26 04:36:01 2002  Akinori MUSHA  <knu@iDaemons.org>

	* eval.c, gc.c: use a common set of alloca() #ifdef's.  This fixes
	  the build with Intel C Compiler for Linux.

Tue Oct 22 18:15:49 2002  Guy Decoux  <ts@moulon.inra.fr>

	* eval.c (rb_eval): local_vars[-1] should protect body, not a
	  local_tbl.

Tue Oct 22 02:31:16 2002  Yukihiro Matsumoto  <matz@ruby-lang.org>
